--- a/pasianssi/pom.xml
+++ b/pasianssi/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>pasianssi</groupId>
+    <groupId>sovelluslogiikka</groupId>
     <artifactId>pasianssi</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -33,30 +33,31 @@
                 <groupId>group.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.8</version>
-                    <configuration>
-                        <targetClasses>
-                            <param>pasianssi.sovelluslogiikka.*</param>
-                        </targetClasses>
-                        <targetTests>
-                            <param>pasianssi.sovelluslogiikka.*</param>
-                        </targetTests>
-                    </configuration>
+                <configuration>
+                    <targetClasses>
+                        <param>sovelluslogiikka.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>sovelluslogiikka.*</param>
+                    </targetTests>
+                </configuration>
+
             </plugin>
             
             <plugin>
                  
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>2.17</version>
-            <configuration>
-              <configLocation>checkstyle.xml</configLocation>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jxr-plugin</artifactId>
-            <version>2.5</version>
-          </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
         </plugins>
     </build>
 </project>
